--- a/app/package.json
+++ b/app/package.json
@@ -17,6 +17,7 @@
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-native": "0.72.6",
+    "react-native-animatable": "^1.4.0",
     "react-native-gesture-handler": "^2.14.0",
     "react-native-paper": "^5.11.4",
     "react-native-reanimated": "^3.6.1",
