--- a/MobileApp/app/package.json
+++ b/MobileApp/app/package.json
@@ -22,8 +22,10 @@
     "react-native": "0.72.6",
     "react-native-animatable": "^1.4.0",
     "react-native-gesture-handler": "^2.14.0",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-paper": "^5.11.4",
     "react-native-reanimated": "^3.6.1",
+    "react-native-responsive-dimensions": "^3.1.1",
     "react-native-safe-area-context": "^4.8.2",
     "react-native-screens": "^3.29.0",
     "react-native-svg": "^14.1.0"
