--- a/MobileApp/app/package.json
+++ b/MobileApp/app/package.json
@@ -9,17 +9,26 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/webpack-config": "^19.0.0",
     "@fortawesome/fontawesome-svg-core": "^6.5.1",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-native-fontawesome": "^0.3.0",
+    "@react-native-async-storage/async-storage": "1.18.2",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
     "expo": "~49.0.15",
+    "expo-auth-session": "~5.0.2",
+    "expo-crypto": "~12.4.1",
+    "expo-dev-client": "~2.4.12",
     "expo-font": "~11.4.0",
     "expo-status-bar": "~1.6.0",
+    "expo-web-browser": "~12.3.2",
+    "firebase": "^10.7.2",
+    "link": "^2.1.0",
     "react": "18.2.0",
-    "react-native": "0.72.6",
+    "react-dom": "18.2.0",
+    "react-native": "^0.72.6",
     "react-native-animatable": "^1.4.0",
     "react-native-gesture-handler": "^2.14.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
@@ -28,7 +37,9 @@
     "react-native-responsive-dimensions": "^3.1.1",
     "react-native-safe-area-context": "^4.8.2",
     "react-native-screens": "^3.29.0",
-    "react-native-svg": "^14.1.0"
+    "react-native-svg": "^14.1.0",
+    "react-native-web": "~0.19.6",
+    "expo-application": "~5.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
