--- a/MobileApp/app/package.json
+++ b/MobileApp/app/package.json
@@ -20,6 +20,7 @@
     "expo": "~49.0.15",
     "expo-application": "~5.3.0",
     "expo-auth-session": "~5.0.2",
+    "expo-constants": "~14.4.2",
     "expo-crypto": "~12.4.1",
     "expo-dev-client": "~2.4.12",
     "expo-font": "~11.4.0",
@@ -39,8 +40,7 @@
     "react-native-safe-area-context": "^4.8.2",
     "react-native-screens": "^3.29.0",
     "react-native-svg": "^14.1.0",
-    "react-native-web": "~0.19.6",
-    "expo-constants": "~14.4.2"
+    "react-native-web": "~0.19.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
