--- a/MobileApp/app/app.json
+++ b/MobileApp/app/app.json
@@ -15,9 +15,13 @@
       "**/*"
     ],
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.FieldMaster.aws",
+
     },
     "android": {
+
+    "package": "com.FieldMaster.aws",
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
