--- a/MobileApp/app/package.json
+++ b/MobileApp/app/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-native-fontawesome": "^0.3.0",
     "@react-native-async-storage/async-storage": "1.18.2",
+    "@react-native-community/geolocation": "^3.1.0",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-firebase/app": "^18.8.0",
     "@react-navigation/native": "^6.1.9",
@@ -37,6 +38,7 @@
     "react-native-animatable": "^1.4.0",
     "react-native-gesture-handler": "^2.14.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-maps": "1.7.1",
     "react-native-paper": "^5.12.3",
     "react-native-reanimated": "~3.6.2",
     "react-native-responsive-dimensions": "^3.1.1",
