--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "app": "cd MobileApp && cd app && expo start",
     "web": "cd WebApp &&  npm start"
-
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "nodemailer": "^6.9.9"
+  }
 }
