--- a/MobileApp/app/package.json
+++ b/MobileApp/app/package.json
@@ -27,6 +27,7 @@
     "expo-crypto": "~12.4.1",
     "expo-dev-client": "~2.4.12",
     "expo-font": "~11.4.0",
+    "expo-location": "~16.1.0",
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
     "expo-web-browser": "~12.3.2",
@@ -37,6 +38,7 @@
     "react-native": "^0.72.6",
     "react-native-animatable": "^1.4.0",
     "react-native-gesture-handler": "^2.14.0",
+    "react-native-google-places-autocomplete": "^2.5.6",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-maps": "1.7.1",
     "react-native-paper": "^5.12.3",
@@ -46,8 +48,7 @@
     "react-native-screens": "^3.29.0",
     "react-native-svg": "^14.1.0",
     "react-native-vector-icons": "^10.0.3",
-    "react-native-web": "~0.19.6",
-    "expo-location": "~16.1.0"
+    "react-native-web": "~0.19.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
