--- a/MobileApp/app/package.json
+++ b/MobileApp/app/package.json
@@ -28,6 +28,8 @@
     "expo-dev-client": "~2.4.12",
     "expo-font": "~11.4.0",
     "expo-location": "~16.1.0",
+    "expo-print": "^12.8.1",
+    "expo-sharing": "^11.10.0",
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
     "expo-web-browser": "~12.3.2",
