--- a/MobileApp/app/package.json
+++ b/MobileApp/app/package.json
@@ -25,7 +25,7 @@
     "expo-auth-session": "~5.0.2",
     "expo-constants": "~14.4.2",
     "expo-crypto": "~12.4.1",
-    "expo-dev-client": "~2.4.12",
+    "expo-dev-client": "~2.4.13",
     "expo-font": "~11.4.0",
     "expo-location": "~16.1.0",
     "expo-splash-screen": "~0.20.5",
@@ -37,16 +37,16 @@
     "react-dom": "18.2.0",
     "react-native": "^0.72.6",
     "react-native-animatable": "^1.4.0",
-    "react-native-gesture-handler": "^2.14.0",
+    "react-native-gesture-handler": "~2.12.0",
     "react-native-google-places-autocomplete": "^2.5.6",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-maps": "1.7.1",
     "react-native-paper": "^5.12.3",
-    "react-native-reanimated": "~3.6.2",
+    "react-native-reanimated": "~3.3.0",
     "react-native-responsive-dimensions": "^3.1.1",
-    "react-native-safe-area-context": "^4.8.2",
-    "react-native-screens": "^3.29.0",
-    "react-native-svg": "^14.1.0",
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-screens": "~3.22.0",
+    "react-native-svg": "13.9.0",
     "react-native-vector-icons": "^10.0.3",
     "react-native-web": "~0.19.6"
   },
