--- a/MobileApp/app/package.json
+++ b/MobileApp/app/package.json
@@ -23,6 +23,7 @@
     "expo": "~49.0.15",
     "expo-application": "~5.3.0",
     "expo-auth-session": "~5.0.2",
+    "expo-blur": "~12.4.1",
     "expo-constants": "~14.4.2",
     "expo-crypto": "~12.4.1",
     "expo-dev-client": "~2.4.12",
@@ -32,11 +33,13 @@
     "expo-status-bar": "~1.6.0",
     "expo-web-browser": "~12.3.2",
     "firebase": "^10.7.2",
+    "gravatar-api": "^1.5.0",
     "link": "^2.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "^0.72.6",
     "react-native-animatable": "^1.4.0",
+    "react-native-blur": "^3.2.2",
     "react-native-gesture-handler": "^2.14.0",
     "react-native-google-places-autocomplete": "^2.5.6",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
@@ -48,8 +51,7 @@
     "react-native-screens": "^3.29.0",
     "react-native-svg": "^14.1.0",
     "react-native-vector-icons": "^10.0.3",
-    "react-native-web": "~0.19.6",
-    "expo-blur": "~12.4.1"
+    "react-native-web": "~0.19.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
