--- a/MobileApp/package.json
+++ b/MobileApp/package.json
@@ -4,6 +4,7 @@
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
     "expo-constants": "^15.4.5",
+    "react-native-blur": "^3.2.2",
     "react-native-gesture-handler": "^2.14.0",
     "react-native-reanimated": "^3.6.1",
     "react-native-safe-area-context": "^4.8.2",
