--- a/MobileApp/app/package.json
+++ b/MobileApp/app/package.json
@@ -19,6 +19,7 @@
     "@react-native-firebase/app": "^18.8.0",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
+    "axios": "^1.6.7",
     "bcrypt": "^5.1.1",
     "expo": "~49.0.15",
     "expo-application": "~5.3.0",
