--- a/WebApp/package.json
+++ b/WebApp/package.json
@@ -14,6 +14,7 @@
     "concurrently": "^8.2.2",
     "dotenv": "^16.3.2",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
     "mailgun.js": "^10.1.0",
     "mongoose": "^8.1.0",
     "multer": "^1.4.5-lts.1",
