--- a/MobileApp/app/package.json
+++ b/MobileApp/app/package.json
@@ -22,6 +22,7 @@
     "@react-navigation/stack": "^6.3.20",
     "axios": "^1.6.7",
     "bcrypt": "^5.1.1",
+    "body-parser": "^1.20.2",
     "expo": "~49.0.15",
     "expo-application": "~5.3.0",
     "expo-auth-session": "~5.0.2",
@@ -46,7 +47,6 @@
     "react-native": "0.72.10",
     "react-native-animatable": "^1.4.0",
     "react-native-blur": "^3.2.2",
-    "react-native-gesture-handler": "^2.14.0",
     "react-native-google-places-autocomplete": "^2.5.6",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-maps": "1.7.1",
