FM | added backend functionality for savescreen.js file

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@expo-google-fonts/pt-sans": "^0.2.3",
     "@mdi/react": "^1.6.1",
     "@uiw/react-native": "^4.1.1",
+    "axios": "^1.6.7",
     "expo-app-loading": "^2.1.1",
     "nodemailer": "^6.9.9",
     "react-native-vector-icons": "^10.0.3"
