--- a/MobileApp/app/package.json
+++ b/MobileApp/app/package.json
@@ -47,9 +47,12 @@
     "react-native": "0.72.10",
     "react-native-animatable": "^1.4.0",
     "react-native-blur": "^3.2.2",
+    "react-native-dropdown-picker": "^5.4.6",
+    "react-native-elements": "^3.4.3",
     "react-native-google-places-autocomplete": "^2.5.6",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-maps": "1.7.1",
+    "react-native-modal-dropdown": "^1.0.2",
     "react-native-paper": "^5.12.3",
     "react-native-picker-select": "^9.0.1",
     "react-native-reanimated": "~3.3.0",
