--- a/MobileApp/app/package.json
+++ b/MobileApp/app/package.json
@@ -49,6 +49,7 @@
     "react-native-blur": "^3.2.2",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-elements": "^3.4.3",
+    "react-native-gesture-handler": "~2.12.0",
     "react-native-google-places-autocomplete": "^2.5.6",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-maps": "1.7.1",
