--- a/MobileApp/app/package.json
+++ b/MobileApp/app/package.json
@@ -20,6 +20,7 @@
     "@react-native-picker/picker": "2.4.10",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
+    "@turf/turf": "^6.5.0",
     "axios": "^1.6.7",
     "bcrypt": "^5.1.1",
     "expo": "~49.0.15",
@@ -46,7 +47,7 @@
     "react-native": "0.72.10",
     "react-native-animatable": "^1.4.0",
     "react-native-blur": "^3.2.2",
-    "react-native-gesture-handler": "^2.14.0",
+    "react-native-gesture-handler": "~2.12.0",
     "react-native-google-places-autocomplete": "^2.5.6",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-maps": "1.7.1",
