FM | Add background  service location

--- a/MobileApp/app/package.json
+++ b/MobileApp/app/package.json
@@ -32,10 +32,12 @@
     "expo-dev-client": "~2.4.13",
     "expo-font": "~11.4.0",
     "expo-location": "~16.1.0",
+    "expo-module-scripts": "^3.4.1",
     "expo-print": "~12.4.2",
     "expo-sharing": "~11.5.0",
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
+    "expo-task-manager": "~11.3.0",
     "expo-web-browser": "~12.3.2",
     "firebase": "^10.7.2",
     "gravatar-api": "^1.5.0",
