FM | Change the app.js

--- a/MobileApp/app/app.json
+++ b/MobileApp/app/app.json
@@ -39,7 +39,8 @@
       [
         "expo-location",
         {
-          "locationAlwaysAndWhenInUsePermission": "Allow $(PRODUCT_NAME) to use your location."
+          "locationAlwaysAndWhenInUsePermission": "Allow $(PRODUCT_NAME) to use your location.",
+          "locationBackgroundPermission": "Allow $(PRODUCT_NAME) to use your location in the background."
         }
       ]
     ],
