--- a/WebApp/package.json
+++ b/WebApp/package.json
@@ -37,6 +37,7 @@
     "react-bootstrap": "^2.10.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.50.1",
+    "react-modal": "^3.16.1",
     "react-router-dom": "^6.22.0",
     "react-router-hash-link": "^2.4.3",
     "react-scroll": "^1.9.0",
