--- a/WebApp/client/package.json
+++ b/WebApp/client/package.json
@@ -7,9 +7,11 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.15.10",
     "@mui/material": "^5.15.10",
+    "@react-google-maps/api": "^2.19.3",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "antd": "^5.15.2",
     "autoprefixer": "^10.4.17",
     "axios": "^1.6.5",
     "bootstrap": "^5.3.3",
