--- a/WebApp/client/package.json
+++ b/WebApp/client/package.json
@@ -7,6 +7,7 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.15.10",
     "@mui/material": "^5.15.10",
+    "@react-google-maps/api": "^2.19.3",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -24,6 +25,7 @@
     "react-router-dom": "^6.22.0",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.9.0",
+    "react-select": "^5.8.0",
     "swiper": "^11.0.7",
     "tailwindcss": "^3.4.1",
     "web-vitals": "^2.1.4"
