--- a/WebApp/client/package.json
+++ b/WebApp/client/package.json
@@ -22,10 +22,12 @@
     "react-bootstrap-icons": "^1.11.3",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
+    "react-modal": "^3.16.1",
     "react-pro-sidebar": "^1.1.0",
     "react-router-dom": "^6.22.0",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.9.0",
+    "react-transition-group": "^4.4.5",
     "swiper": "^11.0.7",
     "tailwindcss": "^3.4.1",
     "web-vitals": "^2.1.4"
