--- a/MobileApp/app/package.json
+++ b/MobileApp/app/package.json
@@ -48,6 +48,7 @@
     "react-native": "0.72.10",
     "react-native-animatable": "^1.4.0",
     "react-native-blur": "^3.2.2",
+    "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-google-places-autocomplete": "^2.5.6",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
