--- a/MobileApp/app/package.json
+++ b/MobileApp/app/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^13.0.0",
     "@expo/webpack-config": "^19.0.0",
     "@fortawesome/fontawesome-svg-core": "^6.5.1",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
@@ -16,10 +17,12 @@
     "@react-native-async-storage/async-storage": "1.18.2",
     "@react-native-community/geolocation": "^3.1.0",
     "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-community/viewpager": "^5.0.11",
     "@react-native-firebase/app": "^18.8.0",
     "@react-native-picker/picker": "2.4.10",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
+    "@turf/turf": "^6.5.0",
     "axios": "^1.6.8",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
@@ -49,9 +52,10 @@
     "react-native-blur": "^3.2.2",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-elements": "^3.4.3",
+    "react-native-gesture-handler": "^2.16.0",
     "react-native-google-places-autocomplete": "^2.5.6",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
-    "react-native-maps": "1.7.1",
+    "react-native-maps": "^1.7.1",
     "react-native-modal-dropdown": "^1.0.2",
     "react-native-paper": "^5.12.3",
     "react-native-picker-select": "^9.0.1",
