--- a/MobileApp/app/package.json
+++ b/MobileApp/app/package.json
@@ -49,6 +49,7 @@
     "react-native": "0.72.10",
     "react-native-animatable": "^1.4.0",
     "react-native-blur": "^3.2.2",
+    "react-native-config": "^1.5.1",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "~2.12.0",
