--- a/MobileApp/app/package.json
+++ b/MobileApp/app/package.json
@@ -40,6 +40,7 @@
     "expo-task-manager": "~11.3.0",
     "expo-web-browser": "~12.3.2",
     "firebase": "^10.7.2",
+    "geolib": "^3.3.4",
     "gravatar-api": "^1.5.0",
     "link": "^2.1.0",
     "metro": "^0.80.6",
