--- a/MobileApp/app/package.json
+++ b/MobileApp/app/package.json
@@ -20,6 +20,7 @@
     "@react-native-picker/picker": "2.4.10",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
+    "@turf/area": "^6.5.0",
     "axios": "^1.6.7",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
