--- a/MobileApp/package.json
+++ b/MobileApp/package.json
@@ -9,6 +9,7 @@
     "react-native-blur": "^3.2.2",
     "react-native-picker-select": "^9.0.1",
     "react-native-reanimated": "^3.6.1",
+    "react-native-responsive-dimensions": "^3.1.1",
     "react-native-safe-area-context": "^4.8.2",
     "react-native-screens": "^3.29.0"
   }
