--- a/MobileApp/app/package.json
+++ b/MobileApp/app/package.json
@@ -65,6 +65,7 @@
     "react-native-picker-select": "^9.0.1",
     "react-native-reanimated": "~3.3.0",
     "react-native-responsive-dimensions": "^3.1.1",
+    "react-native-responsive-fontsize": "^0.5.1",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-svg": "13.9.0",
