--- a/MobileApp/app/package.json
+++ b/MobileApp/app/package.json
@@ -35,7 +35,9 @@
     "expo-constants": "~14.4.2",
     "expo-crypto": "~12.4.1",
     "expo-dev-client": "~2.4.13",
+    "expo-document-picker": "^12.0.1",
     "expo-font": "~11.4.0",
+    "expo-image-picker": "~14.3.2",
     "expo-location": "~16.1.0",
     "expo-module-scripts": "^3.4.1",
     "expo-print": "~12.4.2",
@@ -50,6 +52,7 @@
     "link": "^2.1.0",
     "metro": "^0.80.6",
     "metro-config": "^0.80.6",
+    "multer": "^1.4.5-lts.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.72.10",
