--- a/MobileApp/app/package.json
+++ b/MobileApp/app/package.json
@@ -59,6 +59,7 @@
     "react-native-animatable": "^1.4.0",
     "react-native-blur": "^3.2.2",
     "react-native-config": "^1.5.1",
+    "react-native-dialog": "^9.3.0",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-google-places-autocomplete": "^2.5.6",
