--- a/MobileApp/app/package.json
+++ b/MobileApp/app/package.json
@@ -24,6 +24,7 @@
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
     "@turf/area": "^6.5.0",
+    "@turf/helpers": "^7.0.0",
     "@turf/turf": "^6.5.0",
     "axios": "^1.6.7",
     "bcrypt": "^5.1.1",
