--- a/WebApp/client/package.json
+++ b/WebApp/client/package.json
@@ -32,6 +32,7 @@
     "react-scroll": "^1.9.0",
     "react-select": "^5.8.0",
     "react-transition-group": "^4.4.5",
+    "sweetalert2": "^11.12.0",
     "swiper": "^11.0.7",
     "tailwindcss": "^3.4.1",
     "web-vitals": "^2.1.4"
