--- a/MobileApp/app/package.json
+++ b/MobileApp/app/package.json
@@ -67,6 +67,7 @@
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-maps": "^1.15.6",
     "react-native-maps-directions": "^1.9.0",
+    "react-native-modal": "^13.0.1",
     "react-native-modal-dropdown": "^1.0.2",
     "react-native-paper": "^5.12.3",
     "react-native-picker-select": "^9.0.1",
