--- a/WebApp/package.json
+++ b/WebApp/package.json
@@ -47,6 +47,7 @@
     "react-router-hash-link": "^2.4.3",
     "react-scroll": "^1.9.0",
     "reactstrap": "^9.2.2",
+    "sweetalert2": "^11.12.0",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
