--- a/MobileApp/app/package.json
+++ b/MobileApp/app/package.json
@@ -78,6 +78,7 @@
     "react-native-screens": "~3.22.0",
     "react-native-svg": "13.9.0",
     "react-native-vector-icons": "^10.0.3",
+    "react-native-view-shot": "^3.8.0",
     "react-native-web": "~0.19.6"
   },
   "devDependencies": {
