--- a/MobileApp/app/package.json
+++ b/MobileApp/app/package.json
@@ -37,6 +37,7 @@
     "expo-crypto": "~12.4.1",
     "expo-dev-client": "~2.4.13",
     "expo-document-picker": "^12.0.1",
+    "expo-file-system": "~15.4.5",
     "expo-font": "~11.4.0",
     "expo-image-picker": "~14.3.2",
     "expo-location": "~16.1.0",
