--- a/WebApp/client/package.json
+++ b/WebApp/client/package.json
@@ -19,6 +19,7 @@
     "axios": "^1.6.5",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
+    "jwt-decode": "^4.0.0",
     "mdb-react-ui-kit": "^7.2.0",
     "postcss": "^8.4.35",
     "react": "^18.2.0",
