--- a/WebApp/client/package.json
+++ b/WebApp/client/package.json
@@ -13,6 +13,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@turf/turf": "^7.0.0",
     "antd": "^5.18.1",
     "antd-style": "^3.6.2",
     "autoprefixer": "^10.4.17",
