--- a/WebApp/client/package.json
+++ b/WebApp/client/package.json
@@ -6,6 +6,7 @@
     "@ant-design/icons": "^5.3.7",
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
+    "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@mui/icons-material": "^5.15.10",
     "@mui/material": "^5.15.10",
     "@react-google-maps/api": "^2.19.3",
