--- a/WebApp/client/package.json
+++ b/WebApp/client/package.json
@@ -20,6 +20,7 @@
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
+    "html2canvas": "^1.4.1",
     "mdb-react-ui-kit": "^7.2.0",
     "postcss": "^8.4.35",
     "react": "^18.2.0",
