--- a/WebApp/client/package.json
+++ b/WebApp/client/package.json
@@ -18,9 +18,10 @@
     "antd": "^5.18.1",
     "antd-style": "^3.6.2",
     "autoprefixer": "^10.4.17",
-    "axios": "^1.6.5",
+    "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
+    "chart.js": "^4.4.3",
     "jwt-decode": "^4.0.0",
     "mdb-react-ui-kit": "^7.2.0",
     "postcss": "^8.4.35",
