--- a/WebApp/client/package.json
+++ b/WebApp/client/package.json
@@ -27,6 +27,7 @@
     "postcss": "^8.4.35",
     "react": "^18.2.0",
     "react-bootstrap-icons": "^1.11.3",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-modal": "^3.16.1",
