FM | map capturing well

--- a/WebApp/client/package.json
+++ b/WebApp/client/package.json
@@ -22,8 +22,9 @@
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
-    "html2canvas": "^1.4.1",
     "chart.js": "^4.4.3",
+    "dom-to-image": "^2.6.0",
+    "html2canvas": "^1.4.1",
     "jwt-decode": "^4.0.0",
     "mdb-react-ui-kit": "^7.2.0",
     "postcss": "^8.4.35",
