--- a/MobileApp/app/package.json
+++ b/MobileApp/app/package.json
@@ -26,6 +26,7 @@
     "@turf/area": "^6.5.0",
     "@turf/helpers": "^7.0.0",
     "@turf/turf": "^6.5.0",
+    "accordion-collapse-react-native": "^1.1.1",
     "axios": "^1.6.7",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
