--- a/WebApp/client/package.json
+++ b/WebApp/client/package.json
@@ -37,6 +37,7 @@
     "react-scroll": "^1.9.0",
     "react-select": "^5.8.0",
     "react-spinners": "^0.13.8",
+    "react-toastify": "^10.0.5",
     "react-transition-group": "^4.4.5",
     "sweetalert2": "^11.12.0",
     "swiper": "^11.0.7",
