--- a/MobileApp/app/package.json
+++ b/MobileApp/app/package.json
@@ -30,6 +30,7 @@
     "axios": "^1.6.7",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
+    "dotenv": "^16.4.5",
     "expo": "~49.0.15",
     "expo-application": "~5.3.0",
     "expo-auth-session": "~5.0.2",
@@ -63,6 +64,7 @@
     "react-native-blur": "^3.2.2",
     "react-native-config": "^1.5.1",
     "react-native-dialog": "^9.3.0",
+    "react-native-dotenv": "^3.4.11",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-google-places-autocomplete": "^2.5.6",
