--- a/WebApp/client/package.json
+++ b/WebApp/client/package.json
@@ -6,7 +6,9 @@
     "@ant-design/icons": "^5.3.7",
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
+    "@fortawesome/free-brands-svg-icons": "^6.5.2",
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "@iconify/react": "^5.0.1",
     "@mui/icons-material": "^5.15.10",
     "@mui/material": "^5.15.10",
@@ -27,6 +29,7 @@
     "html2canvas": "^1.4.1",
     "jwt-decode": "^4.0.0",
     "mdb-react-ui-kit": "^7.2.0",
+    "mdbreact": "^5.2.0",
     "postcss": "^8.4.35",
     "react": "^18.2.0",
     "react-bootstrap-icons": "^1.11.3",
