--- a/WebApp/client/package.json
+++ b/WebApp/client/package.json
@@ -77,6 +77,7 @@
   },
   "proxy": "http://localhost:5000/",
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "daisyui": "^4.7.2"
   }
 }
