--- a/WebApp/.env
+++ b/WebApp/.env
@@ -3,3 +3,4 @@ MONGODB_URI= mongodb+srv://jsmastery:Zoysa%4031@cluster0.pkvc85v.mongodb.net/
 EMAIL_USER=gamageshenu34@gmail.com
 EMAIL_PASS=NGamage17#
 EMAIL_ADMIN=ugshenali@gmail.com
+FRONTEND_URL=http://localhost:3000
