--- a/WebApp/package.json
+++ b/WebApp/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js"
+    "start": "concurrently \"nodemon server.js\" \"cd client && npm start\""
   },
   "author": "",
   "license": "ISC",
